Hide pedalboard presets and share; Hide preset assign selected

--- a/html/index.html
+++ b/html/index.html
@@ -506,7 +506,7 @@ $('document').ready(function() {
                 <h1 class="top bottom {{titleblend}}">{{fulltitle}}</h1>
                 <!-- <div class="favorite"></div> -->
                 <div class="actions">
-                    <button class="js-preset menu-trigger">Presets</button>
+                    <button class="js-preset menu-trigger mod-hidden">Presets</button>
                       <ul class="drop-menu">
                         <li>Save</li>
                         <li>Save as</li>
@@ -527,7 +527,7 @@ $('document').ready(function() {
                     <button class="js-reset">New Pedalboard</button>
                     <button class="js-save">Save</button>
                     <button class="js-save-as">Save as</button>
-                    <button class="js-share">Share</button>
+                    <button class="js-share mod-hidden">Share</button>
                 </div>
             </div>
             <!-- END PEDALBOARD-SETTINGS -->
