--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -41,7 +41,7 @@
                     <button class="btn btn-xs btn-primary preset-btn-save-as" title="Save as"></button>
                     <button class="btn btn-xs btn-primary preset-btn-rename disabled" title="Rename"></button>
                     <button class="btn btn-xs btn-primary preset-btn-delete disabled" title="Delete"></button>
-                    <button class="btn btn-xs btn-primary preset-btn-assign-sel disabled">Assign selected</button>
+                    <button class="btn btn-xs btn-primary preset-btn-assign-sel disabled mod-hidden">Assign selected</button>
                     <span class="assign-all">
                         <button class="btn btn-xs btn-primary preset-btn-assign-all" mod-role="presets-address">Assign all</button>
                     </span>
