--- a/html/index.html
+++ b/html/index.html
@@ -679,6 +679,8 @@ $('document').ready(function() {
                 <div class="control-group">
                     <input type="checkbox" name="installed" id="cloud-plugins-installed" />
                     <label for="cloud-plugins-installed">Installed only</label>
+                </div>
+                <div class="control-group">
                     <input type="checkbox" name="stable" id="cloud-plugins-stable" />
                     <label for="cloud-plugins-stable">Stable only</label>
                 </div>
