Only show stable plugins in store

--- a/html/index.html
+++ b/html/index.html
@@ -680,7 +680,7 @@ $('document').ready(function() {
                     <input type="checkbox" name="installed" id="cloud-plugins-installed" />
                     <label for="cloud-plugins-installed">Installed only</label>
                 </div>
-                <div class="control-group">
+                <div class="control-group mod-hidden">
                     <input type="checkbox" name="stable" id="cloud-plugins-stable" />
                     <label for="cloud-plugins-stable">Stable only</label>
                 </div>
