Fix share link img paths

--- a/html/index.html
+++ b/html/index.html
@@ -484,10 +484,10 @@ $('document').ready(function() {
                             <small>&nbsp;</small>
                             <h3>Uploaded completed!</h3>
                             <a class="btn btn-danger btn-large btn-block fb" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=" id="share-window-fb">
-                                Share to Facebook <img src="../img/icons/36/share-fb.png" />
+                                Share to Facebook <img src="/img/icons/36/share-fb.png" />
                             </a>
                             <a class="btn btn-inverse btn-large btn-block tw" target="_blank" href="https://twitter.com/intent/tweet?source=" id="share-window-tw">
-                                Share to Twitter <img src="../img/icons/36/share-tw.png" />
+                                Share to Twitter <img src="/img/icons/36/share-tw.png" />
                             </a>
                             <input class="share-url" value="http://pedalboardurl.com" onmousedown="this.select()" readonly id="share-window-url"></input>
                         </div>
