Fix possible black-on-black text in share dialog under firefox

--- a/html/index.html
+++ b/html/index.html
@@ -489,7 +489,7 @@ $('document').ready(function() {
                             <a class="btn btn-inverse btn-large btn-block tw" target="_blank" href="https://twitter.com/intent/tweet?source=" id="share-window-tw">
                                 Share to Twitter <img src="/img/icons/36/share-tw.png" />
                             </a>
-                            <input class="share-url" value="http://pedalboardurl.com" onmousedown="this.select()" readonly id="share-window-url"></input>
+                            <input class="share-url" value="http://pedalboardurl.com" onmousedown="this.select()" readonly id="share-window-url" style="background-color:inherit;"></input>
                         </div>
                     </div>
                     <div id="share-window-bottom">
