--- a/html/index.html
+++ b/html/index.html
@@ -483,13 +483,13 @@ $('document').ready(function() {
                         <div class="textleft mod-hidden" id="share-window-links">
                             <small>&nbsp;</small>
                             <h3>Uploaded completed!</h3>
-                            <a class="btn btn-danger btn-large btn-block fb" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=" id="share-window-fb">
+                            <a class="btn btn-danger btn-large btn-block fb" target="_blank" href="#" id="share-window-fb">
                                 Share to Facebook <img src="/img/icons/36/share-fb.png" />
                             </a>
-                            <a class="btn btn-inverse btn-large btn-block tw" target="_blank" href="https://twitter.com/intent/tweet?source=" id="share-window-tw">
+                            <a class="btn btn-inverse btn-large btn-block tw" target="_blank" href="#" id="share-window-tw">
                                 Share to Twitter <img src="/img/icons/36/share-tw.png" />
                             </a>
-                            <input class="share-url" value="http://pedalboardurl.com" onmousedown="this.select()" readonly id="share-window-url" style="background-color:inherit;"></input>
+                            <input class="share-url" value="" onmousedown="this.select()" readonly id="share-window-url" style="background-color:inherit;"></input>
                         </div>
                     </div>
                     <div id="share-window-bottom">
