--- a/html/index.html
+++ b/html/index.html
@@ -440,13 +440,24 @@ $('document').ready(function() {
                 <form>
                     <div class="form-group" id="share-window-form">
                       <div class="col-sm-6 unpadded-l">
-                        <label for="pedalboard-share-name">NAME<br /><input type="text" class="form-control" id="pedalboard-share-name"  /></label>
+                          <label for="pedalboard-share-name">
+                              AUTHOR NAME <br/>
+                              <input type="text" class="form-control" id="pedalboard-share-name"/>
+                          </label>
                       </div>
                       <div class="col-sm-6 unpadded">
-                        <label for="pedalboard-share-email">E-MAIL<br /><input type="text" class="form-control" id="pedalboard-share-email" /></label>
+                          <label for="pedalboard-share-email">
+                              E-MAIL <br/>
+                              <input type="text" class="form-control" id="pedalboard-share-email"/>
+                          </label>
                       </div>
-                        <label for="pedalboard-share-title">PEDALBOARD NAME<br /><input type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
-                        <label for="pedalboard-share-comment"><textarea rows="4" id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
+                          <label for="pedalboard-share-title">
+                              PEDALBOARD NAME <br/>
+                              <input type="text" class="form-control" id="pedalboard-share-title" placeholder="How will you call this pedalboard?"/>
+                          </label>
+                          <label for="pedalboard-share-comment">
+                              <textarea rows="4" id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea>
+                          </label>
                     </div>
                     <div id="share-window-wrapper">
                         <div class="textcenter" id="record-step-1">
@@ -495,8 +506,8 @@ $('document').ready(function() {
                     <div id="share-window-bottom">
                         <div id="share-wait-screenshot">Waiting for screenshot...</div>
                         <div class="textright">
-                          <button class="js-close btn btn-danger">Close</button>
-                          <button class="js-close btn btn-default btn-success" id="record-share" disabled="disabled">Just share</button>
+                            <button class="js-close btn btn-danger">Close</button>
+                            <button class="js-close btn btn-default btn-success" id="record-share" disabled="disabled">Just share</button>
                         </div>
                     </div>
                 </form>
