Hide xrun counter, dev mode only now

--- a/html/index.html
+++ b/html/index.html
@@ -606,7 +606,7 @@ $('document').ready(function() {
             cpu
           </p>
         </div>
-        <div id="mod-xruns" class="icon">0 Xruns</div>
+        <div id="mod-xruns" class="icon mod-hidden">0 Xruns</div>
         <div id="mod-bypassRight" class="icon mod-bypass">Bypass R</div>
         <div id="mod-bypassLeft" class="icon mod-bypass">Bypass L</div>
         <div id="mod-add-midi" class="icon">Add MIDI Device</div>
