stylizing rec button in share dialog

--- a/html/index.html
+++ b/html/index.html
@@ -463,7 +463,7 @@ $('document').ready(function() {
                     <div id="share-window-wrapper">
                         <div class="textcenter" id="record-step-1">
                             <h2>Record a sample</h2>
-                            <span class="btn btn-danger" id="record-rec">&nbsp;&#9654;</span>
+                            <span class="btn btn-danger" id="record-rec"><u></u></span>
                             <p><small>(optional)</small><p>
                         </div>
                         <div class="controls mod-hidden" id="record-step-2">
