--- a/html/index.html
+++ b/html/index.html
@@ -495,14 +495,14 @@ $('document').ready(function() {
                         <div class="textleft mod-hidden" id="share-window-links">
                             <small>&nbsp;</small>
                             <h3>Uploaded completed!</h3>
-                            <input class="share-url" value="" onmouseup="this.select()" readonly id="share-window-url-link" style="background-color:inherit;"></input>
-                            <a class="btn btn-default btn-large btn-block" target="_blank" id="share-window-url">
+                            <input class="share-url" value="" onmouseup="this.select()" readonly id="share-window-url" style="background-color:inherit;"></input>
+                            <a class="btn btn-default btn-large btn-block" target="_blank" id="share-window-url-btn">
                                 Copy url to clipboard
 <script>
-var copyTextareaBtn = document.getElementById('share-window-url');
+var copyTextareaBtn = document.getElementById('share-window-url-btn');
 
 copyTextareaBtn.addEventListener('click', function(event) {
-  var copyTextarea = document.getElementById('share-window-url-link');
+  var copyTextarea = document.getElementById('share-window-url');
   copyTextarea.select();
 
   try {
@@ -519,6 +519,9 @@ copyTextareaBtn.addEventListener('click', function(event) {
                             </a>
                             <a class="btn btn-inverse btn-large btn-block tw" target="_blank" href="#" id="share-window-tw">
                                 Share to Twitter <img src="/img/icons/36/share-tw.png" />
+                            </a>
+                            <a class="btn btn-inverse btn-large btn-block btn-warning" target="_blank" href="#" id="share-window-feed">
+                                Check out more pedalboards
                             </a>
                             
                         </div>
