Show share-pedalboard button by default

--- a/html/index.html
+++ b/html/index.html
@@ -551,7 +551,7 @@ $('document').ready(function() {
                     <button class="js-reset">New Pedalboard</button>
                     <button class="js-save">Save</button>
                     <button class="js-save-as">Save as</button>
-                    <button class="js-share mod-hidden">Share</button>
+                    <button class="js-share">Share</button>
                 </div>
             </div>
             <!-- END PEDALBOARD-SETTINGS -->
