fixup previous commit

--- a/html/index.html
+++ b/html/index.html
@@ -496,13 +496,11 @@ $('document').ready(function() {
                             <small>&nbsp;</small>
                             <h3>Uploaded completed!</h3>
                             <div class="btn-group">
-                              <div class="tooltip top" role="tooltip" id="share-tooltip">
-                                <div class="tooltip-arrow"></div>
-                                <div class="tooltip-inner">
-                                  
+                                <div class="tooltip top" role="tooltip" id="share-tooltip">
+                                    <div class="tooltip-arrow"></div>
+                                    <div class="tooltip-inner"></div>
                                 </div>
-                              </div>
-                              <input class="share-url" value="" onmouseup="this.select()" readonly id="share-window-url" style="background-color:inherit;" />
+                                <input class="share-url" value="" onmouseup="this.select()" readonly id="share-window-url" style="background-color:inherit;" />
                             </div>
                             <a class="btn btn-default btn-large btn-block" id="share-window-url-btn">
                                 Copy url to clipboard
