More auto-update stuff, just need to figure out CORS...

--- a/html/index.html
+++ b/html/index.html
@@ -1044,8 +1044,8 @@ $('document').ready(function() {
             <p><br/></p>
         </div>
         <div class="mod-upgrade-details">
-            <p>Update version v1.0.0</p>
-            <p>Released on X/X/XX</p>
+            <p>Update version <b>0.0.0</b></p>
+            <p>Released on 0000-00-00</p>
             <p class="textright">
                 <button class="js-close btn btn-xs btn-danger">Cancel</button>
                 <button class="js-upgrade btn btn-xs btn-info">Download</button>
