--- a/html/index.html
+++ b/html/index.html
@@ -112,9 +112,9 @@ $('document').ready(function() {
       shareButton: $('#pedalboard-info .js-share'),
       shareWindow: $('#share-window'),
       presetSaveBox: $('#save-preset'),
-      bluetoothIcon: $('#mod-bluetooth'),
+      statusIcon: $('#mod-status'),
+      upgradeIcon: $('#mod-update'),
       upgradeWindow: $('#mod-upgrade'),
-      upgradeIcon: $('#mod-settings'),
       bypassLeftButton: $("#mod-bypassLeft"),
       bypassRightButton: $("#mod-bypassRight"),
       xrunsButton: $('#mod-xruns'),
@@ -498,8 +498,8 @@ $('document').ready(function() {
         <div id="mod-bypassRight" class="icon mod-bypass">Bypass R</div>
         <div id="mod-bypassLeft" class="icon mod-bypass">Bypass L</div>
         <div id="mod-add-midi" class="icon">Add MIDI Device</div>
-        <div id="mod-settings" class="icon"></div>
-        <div id="mod-bluetooth" class="icon"></div>
+        <div id="mod-update" class="icon"></div>
+        <div id="mod-status" class="icon"></div>
     </div>
     <!-- END MAIN MENU-->
 
