mod-status icon hidden by default, enabled in dev mode

--- a/html/index.html
+++ b/html/index.html
@@ -499,7 +499,7 @@ $('document').ready(function() {
         <div id="mod-bypassLeft" class="icon mod-bypass">Bypass L</div>
         <div id="mod-add-midi" class="icon">Add MIDI Device</div>
         <div id="mod-update" class="icon"></div>
-        <div id="mod-status" class="icon"></div>
+        <div id="mod-status" class="icon mod-hidden"></div>
     </div>
     <!-- END MAIN MENU-->
 
