Put update icon on the bottom-right; Fix zoom controls position

--- a/html/index.html
+++ b/html/index.html
@@ -272,13 +272,6 @@ $('document').ready(function() {
 
         <!-- PEDALBOARD -->
         <div id="pedalboard">
-            <!-- ZOOM CONTROLLERS -->
-            <div id="zoom-controllers">
-                <span class="zoom-out"></span>
-                <span class="zoom-in"></span>
-            </div>
-            <!-- END ZOOM CONTROLLERS -->
-
             <!-- SAVE PEDALBOARD WINDOW -->
             <div id="save-pedalboard" class="save-popup mod-hidden">
                 <div class="mod-box">
@@ -443,6 +436,13 @@ $('document').ready(function() {
             </div>
             <!-- END PEDALBOARD-SETTINGS -->
 
+            <!-- ZOOM CONTROLLERS -->
+            <div id="zoom-controllers">
+                <span class="zoom-out"></span>
+                <span class="zoom-in"></span>
+            </div>
+            <!-- END ZOOM CONTROLLERS -->
+
         </header>
         <!-- END PEDALBOARD-ACTIONS -->
 
@@ -478,6 +478,8 @@ $('document').ready(function() {
         <div id="mod-cloud-plugins" class="icon"></div>
         <div id="banks-saving">Auto saving banks...</div>
 
+        <div id="mod-update" class="status icon"></div>
+        <div id="mod-status" class="status icon mod-hidden"></div>
         <div id="mod-ram" class="icon">
           <div class="progress" id="ram-bar" style="width: 100%;">
             <div class="bar"></div> <!-- not sure if this is needed -->
@@ -498,8 +500,6 @@ $('document').ready(function() {
         <div id="mod-bypassRight" class="icon mod-bypass">Bypass R</div>
         <div id="mod-bypassLeft" class="icon mod-bypass">Bypass L</div>
         <div id="mod-add-midi" class="icon">Add MIDI Device</div>
-        <div id="mod-update" class="icon"></div>
-        <div id="mod-status" class="icon mod-hidden"></div>
     </div>
     <!-- END MAIN MENU-->
 
