Tweak auto-update pop-up, add link to more info

--- a/html/index.html
+++ b/html/index.html
@@ -721,8 +721,11 @@ $('document').ready(function() {
             <p><br/></p>
         </div>
         <div class="mod-upgrade-details">
-            <p>Update version <b>0.0.0</b></p>
-            <p>Released on 0000-00-00</p>
+            <p>
+                Update version <b>0.0.0</b>.<br/>
+                Released on 0000-00-00.
+            </p>
+            <p>For more information about this release <a href="#" target="_blank">click here</a>.</p>
             <p class="textright">
                 <button class="js-close btn btn-xs btn-danger">Cancel</button>
                 <button class="js-upgrade btn btn-xs btn-info">Download</button>
