Minor visual adjustment

--- a/html/index.html
+++ b/html/index.html
@@ -664,9 +664,10 @@ $('document').ready(function() {
                   <label>
                       <input type="radio" name="bank-navigation" autocomplete="off" id="js-navigate-footswitches" /> Navigate pedalboards using footswitches
                   </label>
+                  <br/>
                   <label>
-                      <input type="radio" name="bank-navigation" autocomplete="off" checked="checked" id="js-navigate-midi" /> Navigate pedalboards using MIDI program, channel:
-                      <input type="number" id="js-navigate-midi-channel" value="1" min="1" max="16" step="1"/>
+                      <input type="radio" name="bank-navigation" autocomplete="off" checked="checked" id="js-navigate-midi" /> Navigate pedalboards using MIDI program, channel: &nbsp;
+                      <input type="number" id="js-navigate-midi-channel" value="1" min="1" max="16" step="1" style="box-sizing:border-box;width:40px;" />
                   </label>
               </form>
           </div>
