--- a/html/index.html
+++ b/html/index.html
@@ -190,7 +190,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/mididevices.js?v={{version}}"></script>
 <script type="text/javascript" src="js/hardware.js?v={{version}}"></script>
 <script type="text/javascript" src="js/share.js?v={{version}}"></script>
-<script type="text/javascript" src="js/bluetooth.js?v={{version}}"></script>
+<script type="text/javascript" src="js/networkstatus.js?v={{version}}"></script>
 <script type="text/javascript" src="js/upgrade.js?v={{version}}"></script>
 <script type="text/javascript" src="js/host.js?v={{version}}"></script>
 <script type="text/javascript" src="js/nprogress.js?v={{version}}"></script>
