Specify colors for record-delete button (special fix for firefox)

--- a/html/index.html
+++ b/html/index.html
@@ -361,7 +361,7 @@ $('document').ready(function() {
                             <button class="btn btn-danger btn-large btn-block" id="record-again">
                                 <i class="icon-white icon-repeat"></i> Record again
                             </button>
-                            <button class="btn btn-inverse btn-large btn-block" id="record-delete">
+                            <button class="btn btn-inverse btn-large btn-block" id="record-delete" style="color:black;background-color:#DDDDDD;">
                                 <i class="icon-white icon-remove"></i> Delete sample
                             </button>
                         </div>
