--- a/html/index.html
+++ b/html/index.html
@@ -566,8 +566,8 @@ $('document').ready(function() {
                     PLUGIN STORE
                     <!-- <span class="help"></span> -->
                 </h1>
-                <button class="icon mod-bypass" style="float: right; font-size: 21px;" id="cloud_update_all">Update All</button>
-                <button class="icon mod-bypass mod-hidden" style="float: right; font-size: 21px;" id="cloud_install_all">Install All</button>
+                <button class="status icon mod-bypass" id="cloud_update_all">Update All</button>
+                <button class="status icon mod-bypass mod-hidden" id="cloud_install_all">Install All</button>
             </header>
             <div class="filter clearfix">
                 <h2>Filter</h2>
