Show a little message about uploading pedalboard; Cleanup

--- a/html/index.html
+++ b/html/index.html
@@ -390,7 +390,7 @@ $('document').ready(function() {
                         </div>
                     </div>
                     <div id="share-window-bottom">
-                        <div id="share-wait-screenshot">Waiting for screenshot...</div>
+                        <div id="share-wait-message">&nbsp;</div>
                         <div class="textright">
                             <button class="js-close btn btn-danger" id="record-cancel">Close</button>
                             <button class="js-close btn btn-default btn-success" id="record-share" disabled="disabled">Just share</button>
