Add "view more pedalboards online" link

--- a/html/index.html
+++ b/html/index.html
@@ -629,14 +629,13 @@ $('document').ready(function() {
             <header>
                 <h1 class="bottom top">
                     Pedalboards Library
-                    <!-- <span class="help"></span> -->
                 </h1>
                 <div class="form-group">
                     <input id="searchPedalboard" class="form-control" length="20" placeholder="Filter by keyword(s)" type="search"/>
                 </div>
-                <!-- <span class="close btn btn-danger js-close">Close</span> -->
+                <a style="display:inline-block;float:right;color:#AAA;font-size:1.1em;margin-right:20px;"
+                   href="http://pedalboards.moddevices.com/" target="_blank">View more pedalboards online</a>
             </header>
-            <div class="pedalboards clearfix js-pedalboards"></div>
         </div>
     </div>
 
@@ -681,7 +680,7 @@ $('document').ready(function() {
                 <!-- FORM HORIZONTAL -->
                 <div class="filter clearfix">
                     <div class="clearfix">
-                        <div class="form-group ">
+                        <div class="form-group">
                             <label for="searchBank" >Select pedalboards</label>
                             <input id="searchBank" class="form-control" length="20" placeholder="Filter by keyword(s)" type="search"/>
                         </div>
