Forgot to revert this

--- a/html/index.html
+++ b/html/index.html
@@ -152,7 +152,7 @@ $('document').ready(function() {
       template: '<div class="bar" role="bar"><div class="peg"></div></div><div class="spinner" role="spinner"><div class="spinner-icon"></div></div>'
     });
 
-    $('document')
+    $(document)
     .ajaxStart(function(data) {
         NProgress.start();
     })
