Re-add something I deleted by mistake

--- a/html/index.html
+++ b/html/index.html
@@ -636,6 +636,7 @@ $('document').ready(function() {
                 <a style="display:inline-block;float:right;color:#AAA;font-size:1.1em;margin-right:20px;"
                    href="http://pedalboards.moddevices.com/" target="_blank">View more pedalboards online</a>
             </header>
+            <div class="pedalboards clearfix js-pedalboards"></div>
         </div>
     </div>
 
